--- a/Css/style.css
+++ b/Css/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lalezar&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+
+@import url('https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,400..900;1,400..900&display=swap');
+
 :root{
     --color-white: #fff;
     --color-dark:  #000000;
@@ -7,6 +10,7 @@
     --color-brown:#504940;
     --color-yelloh-soft: #F1CE51;
     --color-whitish-yellow:#EEE6C8;
+
 }
 
 /*esse estilo sera aplicado em todo HTML */
@@ -37,12 +41,15 @@ body {
     background-color: var(--color-brown-soft);
     height: 20px;
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 1px;
+    border-bottom: solid 1.5px var(--color-dark);
     
 }
 
-.logo{
-    cursor:pointer; 
+#logo{
+    cursor: pointer;
+    padding-bottom: 30px;
+
 }
 
 .links a {
@@ -59,8 +66,9 @@ body {
 }
 
 #titulo{
+    font-family: "Vollkorn";
     color: var(--color-brown-soft);
-    font-size: 48px;
+    font-size: 45px;
     margin-bottom: 36px;
     margin-top: 110px;
 }
@@ -72,13 +80,20 @@ main{
 }
 
 
-.carro img {
+.carro  {
     display: flex;
     justify-content: center;
-        width: 100%;
-        height:  600px;
+    border-radius: 15px
+      
+}
+
+.carro img {
+    border-radius: 15px;
+    height: 750px;
+    width: 100vw;
 
 }
+    
 
 .container {
     display: flex;
@@ -86,24 +101,46 @@ main{
     gap: 10px;
 
 }
+/* item*/
 
-.item img {
+
+
+.item{
     display: flex;
-    justify-content: center;
-    background-color:var(--color-white);
-    width: 410px;
-    height: 350px;
+    flex-direction: column;
+    gap: 2px;
+    background-color: var(--color-white);
     border-radius: 20px;
+    box-shadow: 1px 1px 1px 1px rgb(190, 190, 190);
+
+}
+.item img {
+    padding: 8px;
+    width: 390px;
+    height: 300px;
+    border-radius: 10px;
 
 }
 
+
+#title-style{
+    background-color:#ffc800cb;;
+    padding-top: 10px;
+    border-radius:10px 10px 0px 0px;
+    
+}
+
 .item h1 {
+        
+    padding-left: 10px;
+    text-align: left;
     font-size: 25px;
     padding-right: 0px;
     color: var(--color-brown);
     
 }
 
+/* item*/
 .Recomendados{
     list-style: none;
     display: flex;
@@ -133,22 +170,30 @@ button{
 
 
 
-#logo{
-    width: 150px;
-    padding-bottom: 26px;
 
-}
+
 .logo{
     padding-top: 35px;
     padding-left: 150px;
     width: 100px;
 }
 
-#developed{
-    font-size: 30px;
+#developed {
+    font-family: "jetbrains moni";
+    padding-right: 40px;
+    font-size: 15px;
     color: var(--color-white);
-    text-align: center;
+    text-align: right;
+
 }
+
+#developed a { 
+    text-decoration: none;
+    color: var(--color-yelloh-soft);
+
+}
+
+
 .footer{
     font-size: 16px;
     padding-top: 25px;
@@ -166,4 +211,5 @@ footer{
     width: 100%;
     height: 270px;
 }
+
 
