--- a/Css/style.css
+++ b/Css/style.css
@@ -3,54 +3,55 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,400..900;1,400..900&display=swap');
 
-:root{
+:root {
     --color-white: #fff;
-    --color-dark:  #000000;
-    --color-brown-soft:#735F4D;
-    --color-brown:#504940;
+    --color-dark: #000000;
+    --color-brown-soft: #614e3d;
+    --color-brown: #504940;
     --color-yelloh-soft: #F1CE51;
-    --color-whitish-yellow:#EEE6C8;
+    --color-whitish-yellow: #EEE6C8;
 
 }
 
 /*esse estilo sera aplicado em todo HTML */
-*{
+* {
     margin: 0;
     padding: 0;
-    letter-spacing: 1   px;
+    letter-spacing: 1px;
+}
+
+html {
+    overflow-x: none;
 }
 
 body {
-     font-family: Arial, Helvetica, sans-serif;  
-     background-color: var(--color-whitish-yellow);
-     height: 100vh;
-     width: 100vw;
-     color: var(--color-dark);
-    }
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: var(--color-whitish-yellow);
+    height: 100vh;
+    width: 100vw;
+    color: var(--color-dark);
+    overflow-x: none;
+}
 
- header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 20px 10%;
-        background-color: var(--color-yelloh-soft);
-        height: 35px;
-    }
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 10%;
+    background-color: var(--color-yelloh-soft);
+    height: 35px;
+}
 
-#border{
+#border {
     background-color: var(--color-brown-soft);
     height: 20px;
     width: 100%;
     margin-bottom: 1px;
     border-bottom: solid 1.5px var(--color-dark);
-    
-}
-
-#logo{
-    cursor: pointer;
-    padding-bottom: 30px;
 
 }
+
+
 
 .links a {
     list-style: none;
@@ -60,12 +61,12 @@ body {
     color: var(--color-dark);
 }
 
-.links li{
+.links li {
     display: inline-block;
     padding: 0px 100px;
 }
 
-#titulo{
+#titulo {
     font-family: "Vollkorn";
     color: var(--color-brown-soft);
     font-size: 45px;
@@ -73,18 +74,17 @@ body {
     margin-top: 110px;
 }
 
-main{
+main {
     text-align: center;
     padding-top: 5em;
     height: 100vh;
 }
 
 
-.carro  {
+.carro {
     display: flex;
     justify-content: center;
     border-radius: 15px
-      
 }
 
 .carro img {
@@ -93,7 +93,7 @@ main{
     width: 100vw;
 
 }
-    
+
 
 .container {
     display: flex;
@@ -101,11 +101,12 @@ main{
     gap: 10px;
 
 }
+
 /* item*/
 
 
 
-.item{
+.item {
     display: flex;
     flex-direction: column;
     gap: 2px;
@@ -114,6 +115,7 @@ main{
     box-shadow: 1px 1px 1px 1px rgb(190, 190, 190);
 
 }
+
 .item img {
     padding: 8px;
     width: 390px;
@@ -122,26 +124,37 @@ main{
 
 }
 
+#title {
+    background-color: var(--color-brown-soft);
+    padding: 40px;
+    font-family: "Vollkorn";
+    text-align: center;
+    color: var(--color-white);
+    font-size: 50px;
 
-#title-style{
-    background-color:#ffc800cb;;
+
+}
+
+#title-style {
+    background-color: #ffc800cb;
+    ;
     padding-top: 10px;
-    border-radius:10px 10px 0px 0px;
-    
+    border-radius: 10px 10px 0px 0px;
+
 }
 
 .item h1 {
-        
+
     padding-left: 10px;
     text-align: left;
     font-size: 25px;
     padding-right: 0px;
     color: var(--color-brown);
-    
+
 }
 
 /* item*/
-.Recomendados{
+.Recomendados {
     list-style: none;
     display: flex;
     justify-content: space-around;
@@ -149,7 +162,7 @@ main{
 
 
 
-button{
+button {
     height: 40px;
     width: 100px;
     padding: 9px 25px;
@@ -157,25 +170,27 @@ button{
     border: none;
     border-radius: 50px;
     cursor: pointer;
-    
+
 }
 
 
-#teste{
+#teste {
     background-color: var(--color-yelloh-soft);
     height: 80px;
     text-align: left;
-    font-size: 16px;
+
 }
 
 
 
 
 
-.logo{
+.logo {
     padding-top: 35px;
     padding-left: 150px;
     width: 100px;
+    cursor: pointer;
+    padding-bottom: 30px;
 }
 
 #developed {
@@ -187,29 +202,26 @@ button{
 
 }
 
-#developed a { 
+#developed a {
     text-decoration: none;
     color: var(--color-yelloh-soft);
 
 }
 
 
-.footer{
+.footer {
     font-size: 16px;
     padding-top: 25px;
     padding-left: 148px;
-    font-size: 10px;
+    font-size: 8px;
     color: var(--color-white);
 }
 
 
-footer{
+footer {
     background-color: var(--color-brown-soft);
-    color:var(--color-yellow-orange);   
-    font-size: 50px;
-    bottom:0%;
+    color: var(--color-yellow-orange);
+    bottom: 0%;
     width: 100%;
     height: 270px;
 }
-
-
